# Relay

./: .gitignore  CMakeLists.txt  README.md  docker-compose-prod.yml  docker-compose.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile  build.sh
backend/Database/: Chats.json  Servers.json  database.json
backend/Database/Chats/: 3.json
backend/includes/: Chats.hpp  Client.hpp  DataFile.hpp  Database.hpp  HttpServer.hpp  HttpSession.hpp  Server.hpp
backend/src/: DataFile.cpp  Database.cpp  HttpServer.cpp  HttpSession.cpp  Server.cpp  main.cpp
documentation/: .gitignore  README.md
documentation/UML_Diagram/: UML_Diagram.py
frontend/: package-lock.json  package.json
frontend/app/: _layout.tsx  help-modal.tsx  notifications-modal.tsx
frontend/app/(auth)/: login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  chat.tsx  index.tsx  profile.tsx  settings.tsx
frontend/app/(tabs)/chats/: [chatId].tsx  _layout.tsx  index.tsx
frontend/context/: AuthProvider.tsx  WebsocketProvider.tsx
frontend/hook/: useServerManager.tsx  useUser.tsx
frontend/types/: IMessage.ts  IMessageData.ts  IUser.ts  IUserAuth.ts  IUserChat.ts
rework-socket-server/: CMakeLists.txt
rework-socket-server/includes/: Client.hpp  Server.hpp  Singleton.hpp
rework-socket-server/src/: Client.cpp  Server.cpp  main.cpp
server/: CMakeLists.txt  build.bat
server/Database/: Chats.json  Servers.json  User.json
server/Database/Chats/: 0.json  1.json
server/includes/: Client.hpp  DataFile.hpp  Server.hpp  Singleton.hpp
server/src/: Client.cpp  DataFile.cpp  Server.cpp  main.cpp
