cmake_minimum_required(VERSION 3.16)

project(Relay)

########################################################################## #####
# BUILD BACKEND SOCKET SERVER
###############################################################################

add_subdirectory(server/)

###############################################################################
# BUILD BACKEND REWORK SOCKET SERVER
###############################################################################

# add_subdirectory(rework-socket-server/)

###############################################################################
# BUILD BACKEND HTTP SERVER
###############################################################################

# add_subdirectory(backend/)
